[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/components/ComponentNumberImput.gd" type="Script" id=1]

[node name="NumberImput" type="LineEdit"]
margin_right = 60.0
margin_bottom = 36.0
grow_horizontal = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "0"
align = 1
max_length = 2
expand_to_text_length = true
caret_blink = true
caret_blink_speed = 0.5
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="focus_exited" from="." to="." method="_on_NumberImput_focus_exited"]
[connection signal="text_change_rejected" from="." to="." method="_on_NumberImput_text_change_rejected"]
[connection signal="text_changed" from="." to="." method="_on_NumberImput_text_changed"]
[connection signal="text_entered" from="." to="." method="_on_NumberImput_text_entered"]
